vpc/vpc.json
{
  "Mappings": {
    "CidrToRegion": {
      "us-east-1": {
        "Cidr": "172.20.0.0/16"
      },
      "us-west-1": {
        "Cidr": "172.22.0.0/16"
      },
      "us-west-2": {
        "Cidr": "172.24.0.0/16"
      },
      "eu-west-1": {
        "Cidr": "172.26.0.0/16"
      },
      "eu-central-1": {
        "Cidr": "172.28.0.0/16"
      }
    },
    "SubnetsToAz": {
      "us-west-1": {
        "UsWest1aPublic": "172.22.0.0/20",
        "UsWest1aPrivate": "172.22.240.0/20",
        "UsWest1bPublic": "172.22.16.0/20",
        "UsWest1bPrivate": "172.22.224.0/20",
        "UsWest1cPublic": "172.22.32.0/20",
        "UsWest1cPrivate": "172.22.208.0/20"
      }
    },
    "RegionToNatAmi": {
      "us-east-1": {
        "Ami": "ami-184dc970"
      },
      "us-west-1": {
        "Ami": "ami-a98396ec"
      },
      "us-west-2": {
        "Ami": "ami-290f4119"
      }
    }
  },
  "Resources": {
    "Igw": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
      }
    },
    "VpcIgwAttachment": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "InternetGatewayId": {
          "Ref": "Igw"
        },
        "VpcId": {
          "Ref": "Vpc"
        }
      }
    },
    "DefaultRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "DefaultRouteTable"
          }
        ]
      }
    },
    "DefaultRouteThroughIgw": {
      "DependsOn": "VpcIgwAttachment",
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "Igw"
        },
        "RouteTableId": {
          "Ref": "DefaultRouteTable"
        }
      }
    },
    "NatInstanceIamProfile": {
      "DependsOn": "NatInstanceIamPolicies",
      "Type": "AWS::IAM::InstanceProfile",
      "Properties": {
        "Path": "/",
        "Roles": [
          {
            "Ref": "NatInstanceIamRole"
          }
        ]
      }
    },
    "NatInstanceIamRole": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Version": "2012-10-17",
          "Statement": [
            {
              "Effect": "Allow",
              "Principal": {
                "Service": [
                  "ec2.amazonaws.com"
                ]
              },
              "Action": [
                "sts:AssumeRole"
              ]
            }
          ]
        },
        "Path": "/"
      }
    },
    "NatInstanceIamPolicies": {
      "DependsOn": "NatInstanceIamRole",
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyName": "allow-nat-instance-to-modify-private-subnet-route-tables",
        "PolicyDocument": {
          "Version": "2012-10-17",
          "Statement": [
            {
              "Action": [
                "ec2:DescribeInstances",
                "ec2:ModifyInstanceAttribute",
                "ec2:DescribeSubnets",
                "ec2:DescribeRouteTables",
                "ec2:CreateRoute",
                "ec2:ReplaceRoute"
              ],
              "Resource": [
                "*"
              ],
              "Effect": "Allow"
            }
          ]
        },
        "Roles": [
          {
            "Ref": "NatInstanceIamRole"
          }
        ]
      }
    },
    "Vpc": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": {
          "Fn::FindInMap": [
            "CidrToRegion",
            {
              "Ref": "AWS::Region"
            },
            "Cidr"
          ]
        },
        "EnableDnsSupport": {
          "Ref": "EnableDnsHostnames"
        },
        "EnableDnsHostnames": {
          "Ref": "EnableDnsHostnames"
        },
        "InstanceTenancy": {
          "Ref": "InstanceTenancy"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Ref": "VpcName"
            }
          }
        ]
      }
    },
    "PublicUsWest1bSubnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc"
        },
        "AvailabilityZone": "us-west-1b",
        "CidrBlock": {
          "Fn::FindInMap": [
            "SubnetsToAz",
            {
              "Ref": "AWS::Region"
            },
            "UsWest1bPublic"
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "-",
                [
                  "public_us-west-1b",
                  {
                    "Fn::FindInMap": [
                      "SubnetsToAz",
                      {
                        "Ref": "AWS::Region"
                      },
                      "UsWest1bPublic"
                    ]
                  }
                ]
              ]
            }
          },
          {
            "Key": "Network",
            "Value": "Public"
          }
        ]
      }
    },
    "PublicUsWest1bDefaultRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "PublicUsWest1bSubnet"
        },
        "RouteTableId": {
          "Ref": "DefaultRouteTable"
        }
      }
    },
    "PrivateUsWest1bRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "private_us_west_1b_route_table"
          }
        ]
      }
    },
    "PrivateUsWest1bSubnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc"
        },
        "AvailabilityZone": "us-west-1b",
        "CidrBlock": {
          "Fn::FindInMap": [
            "SubnetsToAz",
            {
              "Ref": "AWS::Region"
            },
            "UsWest1bPrivate"
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "-",
                [
                  "private_us-west-1b",
                  {
                    "Fn::FindInMap": [
                      "SubnetsToAz",
                      {
                        "Ref": "AWS::Region"
                      },
                      "UsWest1bPrivate"
                    ]
                  }
                ]
              ]
            }
          },
          {
            "Key": "Network",
            "Value": "Private"
          }
        ]
      }
    },
    "PrivateUsWest1bPrivateUsWest1bRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "PrivateUsWest1bSubnet"
        },
        "RouteTableId": {
          "Ref": "PrivateUsWest1bRouteTable"
        }
      }
    },
    "PublicUsWest1cSubnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc"
        },
        "AvailabilityZone": "us-west-1c",
        "CidrBlock": {
          "Fn::FindInMap": [
            "SubnetsToAz",
            {
              "Ref": "AWS::Region"
            },
            "UsWest1cPublic"
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "-",
                [
                  "public_us-west-1c",
                  {
                    "Fn::FindInMap": [
                      "SubnetsToAz",
                      {
                        "Ref": "AWS::Region"
                      },
                      "UsWest1cPublic"
                    ]
                  }
                ]
              ]
            }
          },
          {
            "Key": "Network",
            "Value": "Public"
          }
        ]
      }
    },
    "PublicUsWest1cDefaultRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "PublicUsWest1cSubnet"
        },
        "RouteTableId": {
          "Ref": "DefaultRouteTable"
        }
      }
    },
    "PrivateUsWest1cRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "private_us_west_1c_route_table"
          }
        ]
      }
    },
    "PrivateUsWest1cSubnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc"
        },
        "AvailabilityZone": "us-west-1c",
        "CidrBlock": {
          "Fn::FindInMap": [
            "SubnetsToAz",
            {
              "Ref": "AWS::Region"
            },
            "UsWest1cPrivate"
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "-",
                [
                  "private_us-west-1c",
                  {
                    "Fn::FindInMap": [
                      "SubnetsToAz",
                      {
                        "Ref": "AWS::Region"
                      },
                      "UsWest1cPrivate"
                    ]
                  }
                ]
              ]
            }
          },
          {
            "Key": "Network",
            "Value": "Private"
          }
        ]
      }
    },
    "PrivateUsWest1cPrivateUsWest1cRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "PrivateUsWest1cSubnet"
        },
        "RouteTableId": {
          "Ref": "PrivateUsWest1cRouteTable"
        }
      }
    },
    "PublicToNatSg": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "public-to-nat security group",
        "VpcId": {
          "Ref": "Vpc"
        },
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "IpProtocol": "icmp",
            "FromPort": "0",
            "ToPort": "-1"
          },
          {
            "CidrIp": "0.0.0.0/0",
            "IpProtocol": "icmp",
            "FromPort": "3",
            "ToPort": "-1"
          },
          {
            "CidrIp": "0.0.0.0/0",
            "IpProtocol": "icmp",
            "FromPort": "5",
            "ToPort": "-1"
          },
          {
            "CidrIp": "0.0.0.0/0",
            "IpProtocol": "icmp",
            "FromPort": "11",
            "ToPort": "-1"
          },
          {
            "CidrIp": "0.0.0.0/0",
            "IpProtocol": "icmp",
            "FromPort": "12",
            "ToPort": "-1"
          },
          {
            "CidrIp": {
              "Ref": "AllowSshFrom"
            },
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22"
          }
        ],
        "SecurityGroupEgress": [

        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "public_to_nat_sg"
          }
        ]
      }
    },
    "NatInstancesLaunchConfig": {
      "Type": "AWS::AutoScaling::LaunchConfiguration",
      "Properties": {
        "ImageId": {
          "Fn::FindInMap": [
            "RegionToNatAmi",
            {
              "Ref": "AWS::Region"
            },
            "Ami"
          ]
        },
        "InstanceType": {
          "Ref": "NatInstanceType"
        },
        "AssociatePublicIpAddress": "true",
        "IamInstanceProfile": {
          "Ref": "NatInstanceIamProfile"
        },
        "KeyName": {
          "Ref": "SshKeyPair"
        },
        "SecurityGroups": [
          {
            "Ref": "PublicToNatSg"
          }
        ],
        "UserData": {
          "Fn::Base64": "#!/bin/bash\n#\n# Copyright 2013 Amazon.com, Inc. or its affiliates. All Rights Reserved.\n#\n# Licensed under the Apache License, Version 2.0 (the \"License\").\n# You may not use this file except in compliance with the License.\n# A copy of the License is located at\n#\n#  http://aws.amazon.com/apache2.0\n#\n# or in the \"license\" file accompanying this file. This file is distributed\n# on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either\n# exp [...]
        }
      }
    },
    "NatInstancesAsg": {
      "Type": "AWS::AutoScaling::AutoScalingGroup",
      "Properties": {
        "AvailabilityZones": {
          "Fn::GetAZs": ""
        },
        "MinSize": {
          "Ref": "NatInstancesMinSize"
        },
        "DesiredCapacity": {
          "Ref": "NatInstancesDesiredCapacity"
        },
        "MaxSize": {
          "Ref": "NatInstancesMaxSize"
        },
        "VPCZoneIdentifier": [
          {
            "Ref": "PublicUsWest1bSubnet"
          },
          {
            "Ref": "PublicUsWest1cSubnet"
          }
        ],
        "LaunchConfigurationName": {
          "Ref": "NatInstancesLaunchConfig"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "nat_instances_asg",
            "PropagateAtLaunch": "true"
          }
        ]
      }
    },
    "NatToPrivateSg": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "nat-to-private security group",
        "VpcId": {
          "Ref": "Vpc"
        },
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "IpProtocol": "icmp",
            "FromPort": "0",
            "ToPort": "-1"
          },
          {
            "CidrIp": "0.0.0.0/0",
            "IpProtocol": "icmp",
            "FromPort": "3",
            "ToPort": "-1"
          },
          {
            "CidrIp": "0.0.0.0/0",
            "IpProtocol": "icmp",
            "FromPort": "5",
            "ToPort": "-1"
          },
          {
            "CidrIp": "0.0.0.0/0",
            "IpProtocol": "icmp",
            "FromPort": "11",
            "ToPort": "-1"
          },
          {
            "CidrIp": "0.0.0.0/0",
            "IpProtocol": "icmp",
            "FromPort": "12",
            "ToPort": "-1"
          }
        ],
        "SecurityGroupEgress": [

        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nat_to_private_sg"
          }
        ]
      }
    },
    "NatToPrivateIngress": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "PublicToNatSg",
            "GroupId"
          ]
        },
        "IpProtocol": "-1",
        "FromPort": "-1",
        "ToPort": "-1",
        "GroupId": {
          "Fn::GetAtt": [
            "NatToPrivateSg",
            "GroupId"
          ]
        }
      }
    },
    "PrivateToNatIngress": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "NatToPrivateSg",
            "GroupId"
          ]
        },
        "IpProtocol": "-1",
        "FromPort": "-1",
        "ToPort": "-1",
        "GroupId": {
          "Fn::GetAtt": [
            "PublicToNatSg",
            "GroupId"
          ]
        }
      }
    }
  },
  "Parameters": {
    "SshKeyPair": {
      "Description": "Amazon EC2 key pair",
      "Type": "AWS::EC2::KeyPair::KeyName"
    },
    "AllowSshFrom": {
      "Type": "String",
      "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
      "Default": "127.0.0.1/32",
      "Description": "Network to allow SSH from, to NAT instances. Note that the default effectively disables SSH access.",
      "ConstraintDescription": "Must follow IP/mask notation (e.g. 192.168.1.0/24)"
    },
    "EnableDnsSupport": {
      "Type": "String",
      "AllowedValues": [
        "true",
        "false"
      ],
      "Default": "true",
      "Description": "Specifies whether DNS resolution is supported for the VPC"
    },
    "EnableDnsHostnames": {
      "Type": "String",
      "AllowedValues": [
        "true",
        "false"
      ],
      "Default": "true",
      "Description": "Specifies whether the instances launched in the VPC get DNS hostnames"
    },
    "InstanceTenancy": {
      "Type": "String",
      "AllowedValues": [
        "default",
        "dedicated"
      ],
      "Default": "default",
      "Description": "Dedicated: Any instance launched into the VPC will automatically be dedicated"
    },
    "VpcName": {
      "Type": "String",
      "AllowedPattern": "[\\x20-\\x7E]*",
      "Default": "MyVPC",
      "Description": "Specifies the name of the VPC being created",
      "ConstraintDescription": "can only contain ASCII characters"
    },
    "NatInstanceType": {
      "Type": "String",
      "AllowedValues": [
        "t2.micro",
        "t2.small",
        "t2.medium",
        "m3.medium",
        "m3.large",
        "c4.xlarge"
      ],
      "Default": "t2.micro"
    },
    "NatInstancesMinSize": {
      "Type": "Number",
      "MinValue": 1,
      "MaxValue": 4,
      "Default": 1,
      "Description": "Minimum number of instances to maintain in the nat_instances ASG",
      "ConstraintDescription": "Must be a number between 1 and 4"
    },
    "NatInstancesDesiredCapacity": {
      "Type": "Number",
      "MinValue": 1,
      "MaxValue": 4,
      "Default": 1,
      "Description": "Desired number of instances to maintain in the nat_instances ASG"
    },
    "NatInstancesMaxSize": {
      "Type": "Number",
      "MinValue": 1,
      "MaxValue": 4,
      "Default": 1,
      "Description": "maximum number of instances to maintain in the nat_instances ASG",
      "ConstraintDescription": "Must be a number between 1 and 4"
    }
  },
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "This template creates a Virtual Private Cloud in one AWS region.  The VPC consists of public and private subnets\nin each availability zone, and an autoscaling group of NAT instances, distributed across the public subnets\nin the VPC.  This template will create security groups allowing access through the NAT instances.  If desired, the\ntemplate will create a security group allowing SSH access to the NAT instances to a specified CIDR block (e.g.\nyour home office).\n\nCIDR bloc [...]
}
